# z33-emulator

./: README.md  directives-18869d0e.js  directives-3d465281.js  directives-52403971.js  directives-5f3263c8.js  directives-5f3263c8.js.map  directives-60091733.js  directives-7f34d61a.js.map  directives-f150a193.js  fact-08910bac.js  fact-10c26f89.js  fact-10c26f89.js.map  fact-141ab88b.js  fact-141ab88b.js.map  fact-99e6f524.js.map  fact-aa9a38c2.js.map  fact-dd5c427f.js  fact-dd5c427f.js.map  handler-6043523c.js.map  handler-710e099c.js  handler-710e099c.js.map  handler-b6fc67ef.js  handler-b6fc67ef.js.map  handler-c00e9f68.js.map  handler-d3de2a49.js  handler-d3de2a49.js.map  handler-f6e9a0c7.js  index.css  index.html  index.js  index.js.map  monaco-1462978f.js  monaco-37a60ec6.js  monaco-988633fa.js  web-worker-0.js  web-worker-0.js.map
.github/workflows/: node-deploy.yml  publish-web.yaml
assets/: z33_web-4b81c90e.wasm  z33_web-6b1e0af0.wasm  z33_web-75cb8da1.wasm
emulator/src/runtime/: mod.rs
web/: Cargo.toml  global.d.ts  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
web/app/: index.ts  instructions.js
web/src/: lib.rs
