[package]
name = "z33-web"
version = "0.5.3"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[workspace]
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
z33-emulator = { path = "../emulator" }
wasm-bindgen = "0.2.84"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
nom = "7.1.3"
anyhow = "1.0.69"
codespan-reporting = { git = "https://github.com/brendanzab/codespan.git" }
